# fromsoftware-rs

./: CONTRIBUTING.md  Cargo.toml
crates/darksouls3/: Cargo.toml  mapper-profile.toml
crates/darksouls3/src/: cs.rs  fd4.rs  lib.rs  param.rs  sprj.rs  util.rs
crates/darksouls3/src/app_menu/: new_menu_system.rs
crates/darksouls3/src/cs/: regulation_manager.rs
crates/darksouls3/src/dlkr/: allocator.rs
crates/darksouls3/src/dlui/: bitset.rs  device.rs  extension.rs  manager.rs
crates/darksouls3/src/fd4/: basic_hash_string.rs  pad_manager.rs
crates/darksouls3/src/param/: generated.rs
crates/darksouls3/src/rva/: bundle.rs  rva_data.rs
crates/darksouls3/src/sprj/: chr_ins.rs  chr_module.rs  event_flag.rs  field_area.rs  field_ins.rs  game_data_man.rs  item.rs  item_id.rs  menu.rs  menu_man.rs  player_game_data.rs  task.rs  world_block.rs  world_chr_man.rs  world_info.rs
crates/darksouls3/src/sprj/player_game_data/: gesture.rs
crates/darksouls3/src/util/: input.rs  save.rs  system.rs
crates/eldenring/src/: param.rs
crates/eldenring/src/cs/: player_game_data.rs
crates/nightreign/src/: param.rs
crates/shared/macros/src/: lib.rs  multi_param.rs
crates/shared/src/: empty.rs  lib.rs  subclass.rs
crates/shared/src/util/: incomplete_array_field.rs  unknown_struct.rs
tools/debug-ds3/: Cargo.toml
tools/debug-ds3/src/: display.rs  lib.rs
tools/debug-ds3/src/display/: chr.rs  event_flag.rs  field_area.rs  menu.rs  param.rs  world_block.rs  world_chr_man.rs
tools/param-generator/src/: main.rs
