[package]
name = "darksouls3"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = false
description = "Raw structures and bindings for From Software's title Dark Souls III"

[lints.rust]
unused = "allow"

[dependencies]
bitflags.workspace = true
encoding_rs.workspace = true
from-singleton.workspace = true
ilhook.workspace = true
nalgebra-glm.workspace = true
nalgebra.workspace = true
pelite.workspace = true
shared.workspace = true
thiserror.workspace = true
tracing.workspace = true
vtable-rs.workspace = true
windows.workspace = true
cxx-stl = { version = "3.4", features = [ "msvc2012" ] }

[build-dependencies]
serde_derive = "1"
regex = "1"

[build-dependencies.serde]
version = "1"
features = ["derive"]
